<resources>
    <string name="app_name">Stick Shift Draft</string>
    <string name="app_label">Stick Shift App</string>
    <string name="flashcard_label">Study</string>
    <string name="menu_label">Menu</string>
    <string name="question_list_label">Question List</string>
    <string name="resources_label">Resources</string>
    <string name="start">start</string>
    <string name="menu">menu</string>
    <string name="go">go</string>
    <string name="back">&lt;</string>
    <string name="details">details</string>
    <string name="blank_answer">*click for answer*</string>
    <string name="question_1">The 3 pedals are from left to right:</string>
    <string name="answer_1">Clutch\t\t\t\t\tBrake\t\t\t\t\tGas</string>
    <string name="question_2">When starting the engine, make sure to:</string>
    <string name="answer_2">Push down the clutch pedal</string>
    <string name="question_3">To shift gears:</string>
    <string name="answer_3">Off the gas\nOut of gear\nHit the clutch\nPut in gear\nLet off clutch while hitting gas</string>
    <string name="question_4">When do you shift down?</string>
    <string name="answer_4">To accelerate\nOn hills</string>
    <string name="question_5">When do you shift up?</string>
    <string name="answer_5">When the rpm increases to around the 3\nTo coast/maintain current speed</string>
    <string name="question_6">If you need to brake but you are scared it will stall the car, always remember:</string>
    <string name="answer_6">Push down the clutch pedal\nor\nPull the stick out of gear\n\nYou will never stall the car when it is in neutral</string>
    <string name="question_7">When turning off the engine, make sure to:</string>
    <string name="answer_7">Park in gear\nUse the emergency break</string>
    <string name="detail_1_page_1">The right foot controls the gas and brake, just like in an automatic car.  The left foot controls the clutch.</string>
    <string name="detail_2_page_1">If you have trouble getting the car to start this should be the first thing you check.  The car will not start if the clutch pedal is not pushed down.</string>
    <string name="detail_3_page_1">The hardest part of learning to drive stick is getting down the feel of easing into the gas while letting off the clutch.\n(Press DETAILS for more&#8230;)</string>
    <string name="detail_3_page_2">If it\'s not done correctly the car will stall and you will have to restart the engine.\n(Press DETAILS for more&#8230;)</string>
    <string name="detail_3_page_3">The easiest way to practice this is on a downhill slope, using gravity to help propel the car forward.</string>
    <string name="detail_4_page_1">Higher speeds use higher gears, but downshifting gives you more power to get up to the higher speeds\n(Press DETAILS for more&#8230;)</string>
    <string name="detail_4_page_2">Uphill slopes also need the extra power from downshifting to maintain your speed due to gravity pushing against you</string>
    <string name="detail_5_page_1">The more you accelerate the higher the rpm goes up, making the engine do more work.\n(Press DETAILS for more&#8230;)</string>
    <string name="detail_5_page_2">You don\'t need as much power to coast or maintain speed, so shifting up will give the engine a break and improve gas mileage.\n(Press DETAILS for more&#8230;)</string>
    <string name="detail_5_page_3">Check your car\'s owner manual for a specified recommended shift point</string>
    <string name="detail_6_page_1">Stalling is unlikely once the car is already moving, but knowing this trick can calm this common fear.</string>
    <string name="detail_7_page_1">Stick shifts do not have a designated parking gear so you must use the emergency break.\n(Press DETAILS for more&#8230;)</string>
    <string name="detail_7_page_2">Parking in gear also helps prevent rolling.  Depending on the slope use first gear to prevent rolling backward or reverse to prevent rolling forward.</string>
    <string name="finish_answer">Now use the menu to see a list of all the questions or find additional resources.</string>
    <string name="finish_question">You finished!</string>
    <string name="resources">Resources</string>
    <string name="zip_hint">Enter City or Zip Code</string>
    <string name="search">search google maps</string>
    <string name="search_instructions">Search for nearby driving schools:</string>
    <string name="youtube_button">Watch instructional videos:</string>
    <string name="enter_location">Enter a location to search</string>
    <string name="map_error">Could not connect to Google Maps</string>
    <string name="video_error">Could not connect to Youtube</string>
    <string name="question_list">question list</string>
</resources>
