<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="8dp"
        android:textSize="20dp"
        android:gravity="center"
        android:text="@string/search_instructions"
        android:background="@color/colorAccent"
        />

    <EditText
        android:id="@+id/zip_Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/zip_hint"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:maxLength="35"
        android:inputType="textCapWords"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/search"
        android:onClick="mapGo"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/youtube_button"
        android:layout_margin="36dp"
        android:onClick="videoGo" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/menu"
        android:onClick="mainMenu"/>

</LinearLayout>