<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/question_1"
            android:gravity="center_vertical"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/go"
            android:onClick="mainFacts"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/question_2"
            android:gravity="center_vertical" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/go"
            android:onClick="factTwo"/>

    </LinearLayout>    <LinearLayout
    android:layout_width="match_parent"
    android:layout_weight="2"
    android:layout_height="0dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:text="@string/question_3"
        android:gravity="center_vertical"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/go"
        android:onClick="factThree"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/question_4"
            android:gravity="center_vertical"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/go"
            android:onClick="factFour"/>

    </LinearLayout>    <LinearLayout
    android:layout_width="match_parent"
    android:layout_weight="2"
    android:layout_height="0dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:text="@string/question_5"
        android:gravity="center_vertical"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/go"
        android:onClick="factFive"/>

</LinearLayout>    <LinearLayout
    android:layout_width="match_parent"
    android:layout_weight="2"
    android:layout_height="0dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:text="@string/question_6"
        android:gravity="center_vertical"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/go"
        android:onClick="factSix"/>

</LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_weight="2"
    android:layout_height="0dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:text="@string/question_7"
        android:gravity="center_vertical"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/go"
        android:onClick="factSeven"/>

</LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/menu"
        android:textAllCaps="true"
        android:layout_margin="4dp"
        android:onClick="mainMenu"/>

</LinearLayout>