<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/colorPrimaryDark">

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/question_list"
        android:textAllCaps="true"
        android:layout_margin="48dp"
        android:onClick="questionList"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/resources"
        android:textAllCaps="true"
        android:layout_margin="48dp"
        android:onClick="resourcePage"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_centerInParent="true"
            android:text="@string/start"
            android:onClick="mainFacts"/>
    </RelativeLayout>

</LinearLayout>