<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/fact_pic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:src="@drawable/pedalsinstalled"
        android:scaleType="centerInside"
        android:layout_margin="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:id="@+id/question"
        android:text="@string/question_1"
        android:textSize="20sp"
        android:layout_margin="4dp"
        android:gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp">


            <TextView
                android:id="@+id/answer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="48dp"
                android:paddingRight="48dp"
                android:textSize="20sp"
                android:gravity="center"
                android:background="#c5cae9"
                android:text="@string/blank_answer"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:onClick="answerNextButton"/>
            <Button
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/details"
                android:layout_alignParentBottom="true"
                android:background="@android:color/transparent"
                android:textAllCaps="true"
                android:onClick="detailButton"/>
        <Button
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:text="@string/back"
            android:onClick="backButton" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_centerInParent="true"
            android:text="@string/menu"
            android:onClick="mainMenu"/>
    </RelativeLayout>

</LinearLayout>