<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question_list"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.stickshiftdraft.QuestionListActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:text="@string/question_1"
                android:gravity="center_vertical"/>

            <Button
                android:id="@+id/question_button_one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/go" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:text="@string/question_2"
                android:gravity="center_vertical" />

            <Button
                android:id="@+id/question_button_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/go" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:text="@string/question_3"
                android:gravity="center_vertical" />

            <Button
                android:id="@+id/question_button_three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/go" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:text="@string/question_4"
                android:gravity="center_vertical"/>

            <Button
                android:id="@+id/question_button_four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/go" />

        </LinearLayout>    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/question_5"
            android:gravity="center_vertical"/>

        <Button
            android:id="@+id/question_button_five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/go" />

    </LinearLayout>    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/question_6"
            android:gravity="center_vertical"/>

        <Button
            android:id="@+id/question_button_six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/go" />

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:text="@string/question_7"
                android:gravity="center_vertical"/>

            <Button
                android:id="@+id/question_button_seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/go" />

        </LinearLayout>

</LinearLayout>
